@@ -49,7 +49,7 @@ verilog/inc1.v:76:  $display("left_side : \"right_side \"");
 verilog/inc1.v:77:  $display("na : \"right_side \"");
 verilog/inc1.v:78:  $display("prep ( midp1 left_side midp2 ( outp ) ) : \"right_side \"");
 verilog/inc1.v:79:  $display("na: \"nana\"");
-verilog/inc1.v:80:  $display("left_side right_side : \"left_side right_side \""); 
+verilog/inc1.v:80:  $display("`ls `rs : \"`ls `rs \""); 
 verilog/inc1.v:81:  $display(": \"\""); 
 verilog/inc1.v:82:  $display("left side: \"right side\"");
 verilog/inc1.v:83:  $display("left side  : \"right side  \"");
@@ -70,4 +70,7 @@ verilog/inc1.v:110:     I!#r#e6<_Q{{E2+]I3<[3s)1@D|'E''i!O?]jD>Jo_![Cl)
 verilog/inc1.v:110:     #nj1]p,3^1~,="E@QZB\T)eU\pC#C|7=\$J$##A[@-@{Qk]
 verilog/inc1.v:113: `endprotected
 verilog/inc1.v:114: endmodule
-verilog/inc1.v:115: `line 115 "verilog/inc1.v" 2
+verilog/inc1.v:127: begin addr <= (({regs[6], regs[7]} + 1)); rd <= 1; end and begin addr <= (({regs[6], regs[7]})); wdata <= (rdata); wr <= 1; end
+verilog/inc1.v:128: begin addr <= ({regs[6], regs[7]} + 1); rd <= 1; end
+verilog/inc1.v:129: begin addr <= ({regs[6], regs[7]}); wdata <= (rdata); wr <= 1; end 
+verilog/inc1.v:130: `line 130 "verilog/inc1.v" 2
