@@ -17,6 +17,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix preprocessor `else after series of `elsif.  [Mark Nodine]
 
+****	Fix parametrized defines calling define with comma.  [Joshua Wise]
+
 * Verilog::Language 3.024 2008/04/02
 
 ***	Verilog::Parser will now start parsing using the keywords
